--- a/member_post/pom.xml
+++ b/member_post/pom.xml
@@ -39,13 +39,13 @@
 		    <version>1.5</version>
 		</dependency>
 		
+		
 		<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
 		<dependency>
 		    <groupId>org.mybatis</groupId>
 		    <artifactId>mybatis</artifactId>
 		    <version>3.5.16</version>
-		</dependency>
-		
+		</dependency>	
 
 		
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
@@ -54,8 +54,26 @@
 		    <artifactId>gson</artifactId>
 		    <version>2.11.0</version>
 		</dependency>
-
-
+		
+		
+		<!-- https://mvnrepository.com/artifact/jakarta.activation/jakarta.activation-api -->
+		<dependency>
+		    <groupId>jakarta.activation</groupId>
+		    <artifactId>jakarta.activation-api</artifactId>
+		    <version>2.1.3</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/jakarta.mail/jakarta.mail-api -->
+		<dependency>
+		    <groupId>jakarta.mail</groupId>
+		    <artifactId>jakarta.mail-api</artifactId>
+		    <version>2.1.3</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.eclipse.angus/angus-mail -->
+		<dependency>
+		    <groupId>org.eclipse.angus</groupId>
+		    <artifactId>angus-mail</artifactId>
+		    <version>2.0.3</version>
+		</dependency>
 
 	</dependencies>
 	  
